--- a/Mishtalemli/views/index.html
+++ b/Mishtalemli/views/index.html
@@ -7,12 +7,10 @@
 <body>
     <div id="login">
         <form id="loginform" method="post" action="/">
-            Email:
-            <input type="text" name="email">
-            <br>
-            <br>
-            Password:
-            <input type="text" name="password">
+            <label for="email">Email: </label>
+            <input type="text" name="email" id="email"><br>
+            <label for="password">Password: </label>
+            <input type="password" name="password" id="password">
             <br>
             <input type="submit" value="submit">
         </form>
