--- a/Mishtalemli/views/index.html
+++ b/Mishtalemli/views/index.html
@@ -14,6 +14,8 @@
             <br>
             <input type="submit" value="submit">
         </form>
+
+        <a href="/register">sign up</a>
     </div>
 </body>
 </html>
