--- a/Mishtalemli/views/search.html
+++ b/Mishtalemli/views/search.html
@@ -7,8 +7,7 @@
 <label name="ebayprice">ebay Price: {{ebay.sellingStatus.currentPrice.USD}} USD</label>
 <br>
 
-<label name="ebayshippingprice">Shipping price:</label>
-<div id="shipprice"></div>
+<div>Shipping price: <span id="shipprice"></span></div>
 
 <script>
     function getShippingCost() {
@@ -27,8 +26,8 @@
         httpRequest.onreadystatechange = function () {
 
             if (httpRequest.readyState == 4 && httpRequest.status == 200) {
-                console.log(httpRequest.responseText);
-                document.getElementById('shipprice').innerHTML = httpRequest.responseText;
+                var jsonResponse = JSON.parse(httpRequest.responseText);
+                document.getElementById('shipprice').innerHTML = jsonResponse.ShippingCostSummary.ShippingServiceCost.Value;
             }
         };
 
