Update some error handle

--- a/Mishtalemli/views/search.html
+++ b/Mishtalemli/views/search.html
@@ -38,5 +38,7 @@
 
 <label name="zapprice">zap Price: {{zap.price}} NIS</label>
 <br>
+<label name="amazonprice">amazon Price: {{amazon.price}} USD</label>
+<br>
 <a href="{{ebay.viewItemURL}}">Click here to watch in ebay</a>
 <br>
