--- a/Mishtalemli/views/search.html
+++ b/Mishtalemli/views/search.html
@@ -42,6 +42,7 @@
     }
     getShippingCost();
 </script>
+
 {{#if zap.Price}}
 <label class="search-label" name="zapprice">zap Price: {{zap.Price}} NIS</label>
 {{/if}}
@@ -52,3 +53,23 @@
 <br>
 <a class="search-label" href="{{ebay.Link}}">Click here to watch in ebay</a>
 <br>
+<div id="table">
+    <table id="orderTable">
+        <tr>
+            <th class="title"></th>
+            <th class="title"></th>
+            <th class="title"></th>
+            <th class="title"></th>
+            <th class="title"></th>
+            <th class="title"></th>
+        </tr>
+        <tr>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+        </tr>
+    </table>
+</div>
