--- a/Mishtalemli/public/main.css
+++ b/Mishtalemli/public/main.css
@@ -64,3 +64,9 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+.search-shopping-image {
+    width: 200px;
+    height: 100px;
+    background-color: #ffffff;
+}
