--- a/Mishtalemli/views/search.html
+++ b/Mishtalemli/views/search.html
@@ -64,7 +64,7 @@
             {{/if}}
             {{#if ebay.Price}}
             <td class="cell">
-                <label class="search-label" name="ebayprice">${{ebay.Price}}</label>
+                <label class="search-label" name="ebayprice">{{ebay.Price}}</label>
                 <br>
                 <div class="search-label">Shipping price: $<span id="shipprice"></span></div>
             </td>
