Update recommendation system
minor

--- a/Mishtalemli/public/main.css
+++ b/Mishtalemli/public/main.css
@@ -70,3 +70,14 @@ body {
     height: 100px;
     background-color: #ffffff;
 }
+
+.search-recommendation {
+     display: block;
+     text-align: center;
+}
+
+.search-recommendation-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
